SQuirreL SQL Client Change Log
==============================

Not yet released - available from CVS or in the latest snapshot:
----------------------------------------------------------------

Enhancements:

Refactoring Plugin:
 - Don't try to order the list of tables to be dropped (forcing FK info retrieval) 
   when there is only one table being dropped.

Bug-Fixes:

Hibernate Plugin: 
 - Class names in completion list could change from fully qualified to simple
   while scrolling through the completion list.
 - When a statement like "from Kv k where k." was completed the 
   fields for k. would come from any arbitrary mapped class which name started 
   with Kv

Refactoring Plugin: When generating DROP TABLE statements, Frontbase requires
CASCADE or RESTRICT.  Now we append CASCADE to the DROP TABLE statement.

1830649: Focus Loss
1820792: Sybase ASE - table not shown in object browser
1821354: Changing default value of a column in Derby does nothing
1820214: 2.5.1 DB aliases do not transfer properly to 2.6.1
1820020: modified tables aren't sorted
1815667: Create Table Script does not include column defaults

Bug-fix for plugin unloading where unloading a session plugin did not prevent 
it from binding to new sessions.

2.6.1 (10/24/2007)
==============

Bug-Fixes:

1818446: Packaging problem in v2.6 on MacOS X
1805954: Tables not in alpha order in Object view

2.6 (10/20/2007)
==============

Enhancements:

New Plugin (Hibernate)
   - allows to generate SQL statements from Hibernate HQL statements
   - shows object tree of mapped objects
   - HQL Code completion and syntax highlighting
   - Three ways to create a HibernateSessionFactory
     * Native way using "new Configuration().configure().buildSessionFactory();"
     * JPA way using "Persistence.createEntityManagerFactory("<persitence-unit name>");"
     * User defined way to by calling a user defined provider method.
   See help for further details.
